small tweaks to parameters for plots and added extra entries for bib and glossary

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -35,6 +35,8 @@
   description={Derived allele frequency}
 }
 
+\newacronym[description={False discovery rate}]{fdr}{FDR}{false discovery rate}
+
 \newacronym[description={Principle components analysis}]{pca}{PCA}{principle components analysis}
 
 \newacronym[description={Variant call format}]{vcf}{VCF}{variant call format}
