--- a/references.bib
+++ b/references.bib
@@ -2682,3 +2682,83 @@ title = {{Pacific Populations, Metabolic Disease and ‘Just-So Stories': A Crit
 url = {http://doi.wiley.com/10.1111/ahg.12132},
 year = {2015}
 }
+
+@article{Latourte2017,
+author = {Latourte, Augustin and Soumar{\'{e}}, Aicha and Bardin, Thomas and Perez-Ruiz, Fernando and Debette, St{\'{e}}phanie and Richette, Pascal},
+doi = {10.1136/annrheumdis-2016-210767},
+file = {:home/murraycadzow/Dropbox/Papers/annrheumdis-2016-210767.full.pdf:pdf},
+issn = {0003-4967},
+journal = {Annals of the Rheumatic Diseases},
+month = {jul},
+pages = {e210767},
+pmid = {28754803},
+title = {{Uric acid and incident dementia over 12 years of follow-up: a population-based cohort study}},
+url = {http://ard.bmj.com/lookup/doi/10.1136/annrheumdis-2016-210767},
+year = {2017}
+}
+
+@article{Shen2013pd,
+abstract = {OBJECTIVE: The association between Parkinson's disease (PD) and uric acid levels has gained intensive interest in recent years. We applied meta-analysis to investigate serum uric acid levels in patients with PD in comparison with healthy controls.$\backslash$n$\backslash$nDESIGN: We searched three electronic databases and reference lists up to January 2013. Two collaborators reviewed all the articles and data disagreement was resolved through discussion. Six studies met the eligibility criteria and were included in the meta-analysis of uric acid levels in patients with PD in comparison with controls.$\backslash$n$\backslash$nPARTICIPANTS: 1217 patients with PD and 1276 matched healthy controls.$\backslash$n$\backslash$nRESULTS: The meta-analysis results showed that patients with PD had lower levels of uric acid than healthy controls (summary standardised mean difference (SMD)=-0.52, 95{\%} CI (-0.72 to -0.31)). Further gender subgroup analysis (summary SMD=-0.56, 95{\%} CI (-0.72 to -0.41) for women; summary SMD=-0.62, 95{\%} CI (-0.94 to -0.31) for men) indicated lower uric acid levels in patients with PD than healthy controls in women and men.$\backslash$n$\backslash$nCONCLUSIONS: It was found that patients with PD had lower serum levels of uric acid than healthy controls and this association was more significant in men than in women. More efforts are encouraged to explore the prognostic and therapeutic implications for PD of the present findings.},
+author = {Shen, Liang and Ji, Hong-Fang},
+doi = {10.1136/bmjopen-2013-003620},
+file = {:home/murraycadzow/Dropbox/Papers/e003620.full.pdf:pdf},
+issn = {2044-6055},
+journal = {BMJ Open},
+number = {11},
+pages = {e003620},
+pmid = {24247326},
+title = {{Low uric acid levels in patients with Parkinson's disease: evidence from meta-analysis}},
+url = {http://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2013-003620},
+volume = {3},
+year = {2013}
+}
+
+@article{Chen2014,
+abstract = {BACKGROUND: Serum uric acid (UA) could exert neuro-protective effects against Alzheimer's disease (AD) via its antioxidant capacities. Many studies investigated serum UA levels in AD patients, but to date, results from these observational studies are conflicting.$\backslash$n$\backslash$nMETHODS: We conducted a meta-analysis to compare serum UA levels between AD patients and healthy controls by the random-effects model. Studies were identified by searching PubMed, ISI Web of Science, EMBASE, and the Cochrane library databases from 1966 through July 2013 using the Medical Subject Headings and keywords without restriction in languages. Only case-control studies were included if they had data on serum UA levels in AD patients and healthy controls. Begg's funnel plot and Egger's regression test were applied to assess the potential publication bias. Sensitivity analyses and meta-regression were conducted to explore possible explanations for heterogeneity.$\backslash$n$\backslash$nRESULTS: A total of 11 studies met the inclusion criteria including 2708 participants were abstracted. Serum UA levels were not significantly different in AD patients compared to healthy controls (standardized mean difference (SMD) = -0.50; 95{\%} confidence interval (CI): -1.23 to 0.22). Little evidence of publication bias was observed. Sensitivity analyses showed that the combined SMD was consistent every time omitting any one study, except only one study which greatly influenced the overall results. Meta-regression showed that year of publication, race, sample size, and mean age were not significant sources of heterogeneity.$\backslash$n$\backslash$nCONCLUSION: Our meta-analysis of case-control studies suggests that serum UA levels do not differ significantly in AD patients, but there may be a trend toward decreased UA in AD after an appropriate interpretation. More well-designed investigations are needed to demonstrate the potential change of serum UA levels in AD patients.},
+author = {Chen, Xueping and Guo, Xiaoyan and Huang, Rui and Chen, Yongping and Zheng, Zhenzhen and Shang, Huifang},
+doi = {10.1371/journal.pone.0094084},
+file = {:home/murraycadzow/Dropbox/Papers/journal.pone.0094084.PDF:PDF},
+issn = {19326203},
+journal = {PLoS ONE},
+number = {4},
+pmid = {24714617},
+title = {{Serum uric acid levels in patients with Alzheimer's disease: A meta-analysis}},
+volume = {9},
+year = {2014}
+}
+
+@article{Jonnalagadda2017,
+author = {Jonnalagadda, Manjari and Bharti, Neeraj and Patil, Yatish and Ozarkar, Shantanu and K, Sunitha Manjari and Joshi, Rajendra and Norton, Heather},
+doi = {10.1002/ajhb.23012},
+file = {:home/murraycadzow/Dropbox/Papers/Jonnalagadda{\_}et{\_}al-2017-American{\_}Journal{\_}of{\_}Human{\_}Biology (1).pdf:pdf},
+issn = {15206300},
+journal = {American Journal of Human Biology},
+number = {February},
+pages = {1--10},
+title = {{Identifying signatures of positive selection in pigmentation genes in two South Asian populations}},
+year = {2017}
+}
+
+@article{Hider2013,
+abstract = {BACKGROUND: Currently, there is very limited knowledge about the genes involved in normal pigmentation variation in East Asian populations. We carried out a genome-wide scan of signatures of positive selection using the 1000 Genomes Phase I dataset, in order to identify pigmentation genes showing putative signatures of selective sweeps in East Asia. We applied a broad range of methods to detect signatures of selection including: 1) Tests designed to identify deviations of the Site Frequency Spectrum (SFS) from neutral expectations (Tajima's D, Fay and Wu's H and Fu and Li's D* and F*), 2) Tests focused on the identification of high-frequency haplotypes with extended linkage disequilibrium (iHS and Rsb) and 3) Tests based on genetic differentiation between populations (LSBL). Based on the results obtained from a genome wide analysis of 25 kb windows, we constructed an empirical distribution for each statistic across all windows, and identified pigmentation genes that are outliers in the distribution.
+
+RESULTS: Our tests identified twenty genes that are relevant for pigmentation biology. Of these, eight genes (ATRN, EDAR, KLHL7, MITF, OCA2, TH, TMEM33 and TRPM1,) were extreme outliers (top 0.1{\%} of the empirical distribution) for at least one statistic, and twelve genes (ADAM17, BNC2, CTSD, DCT, EGFR, LYST, MC1R, MLPH, OPRM1, PDIA6, PMEL (SILV) and TYRP1) were in the top 1{\%} of the empirical distribution for at least one statistic. Additionally, eight of these genes (BNC2, EGFR, LYST, MC1R, OCA2, OPRM1, PMEL (SILV) and TYRP1) have been associated with pigmentary traits in association studies.
+
+CONCLUSIONS: We identified a number of putative pigmentation genes showing extremely unusual patterns of genetic variation in East Asia. Most of these genes are outliers for different tests and/or different populations, and have already been described in previous scans for positive selection, providing strong support to the hypothesis that recent selective sweeps left a signature in these regions. However, it will be necessary to carry out association and functional studies to demonstrate the implication of these genes in normal pigmentation variation.},
+author = {Hider, Jessica L and Gittelman, Rachel M and Shah, Tapan and Edwards, Melissa and Rosenbloom, Arnold and Akey, Joshua M and Parra, Esteban J},
+doi = {10.1186/1471-2148-13-150},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hider et al. - 2013 - Exploring signatures of positive selection in pigmentation candidate genes in populations of East Asian ancestry.pdf:pdf},
+issn = {1471-2148},
+journal = {BMC evolutionary biology},
+mendeley-groups = {Selection/iHS},
+month = {jan},
+number = {1},
+pages = {150},
+pmid = {23848512},
+publisher = {BMC Evolutionary Biology},
+title = {{Exploring signatures of positive selection in pigmentation candidate genes in populations of East Asian ancestry.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3727976{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {13},
+year = {2013}
+}
+
